--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,13 +27,23 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+
+  cloud_firestore: ^3.1.6
+  cupertino_icons: ^1.0.2
+  firebase_auth: ^3.3.5
+  firebase_core: ^1.11.0
+  firebase_storage: ^10.2.5
   flutter:
     sdk: flutter
+  get: ^4.6.1
+  
+  
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  
 
 dev_dependencies:
   flutter_test:
