--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_auth: ^3.3.5
   firebase_core: ^1.11.0
   firebase_storage: ^10.2.5
+  image_picker: ^0.8.4+10
   flutter:
     sdk: flutter
   get: ^4.6.1
@@ -68,8 +69,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
