--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   firebase_core: ^1.11.0
   firebase_storage: ^10.2.5
   image_picker: ^0.8.4+10
+  video_player: ^2.3.0
+  video_compress: ^3.1.0
   flutter:
     sdk: flutter
   get: ^4.6.1
