--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   image_picker: ^0.8.4+10
   video_player: ^2.3.0
   video_compress: ^3.1.0
+  timeago: ^3.2.2
   flutter:
     sdk: flutter
   get: ^4.6.1
